GCG Version 3.1.0
=================

Command line interface:
-----------------------

- 'write matrix' and 'write origmatrix' for writing a gnuplot file showing the coefficient matrix


GCG Version 3.0.0
=================

Features
--------

- new roundwise modular structure detection scheme:
  - detectors can implement three optional methods:
    - propagateSeeed : given a partial decomposition d the detector returns a set of decompositions that are a refinement of d
    - finsishSeeed: given a partial decomposition d the detector returns a set of decompositions that are a refinement of d and complete
    - postprocessSeeed: given a complete decomposition d the detector returns a set of complete decompositions
  - there is a current pool of partial decompositions (i.e. some conss and vars are open, initilized by empty decomposition (all vars and conss are open) or user decomposition )
  - in every detection round the refinement method of each active detector is called on each current partial detection and returns a (possibly empty) set of decompositions (possibly still partial but strictly more refined); afterwards the finishing method of each detector is called on each partial decomposition
  - after last round the postprocessing method of the corresponding detectors is called on each complete decomposition
  - duplicates of partial and complete are identified
  - constraint and variable classification according to several criteria reveals more problem structure, and in particular yield candidates for the number of blocks, that are used by graph partitioning detectors
  - detection process can run parallelized (in presence of multiple partial decompositions)
  - structure information concerning the original problem can be used when searching structure in the transformed problem, e.g. by "detect presolve detect"
  - more user interaction (see point "Command line interface" below for more information):
	- by command "explore" and inspecting found decompositions,